--- a/notebooks/Into-to-OOP.ipynb
+++ b/notebooks/Into-to-OOP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -342,6 +342,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct Car {\n",
+    "    float speed;\n",
+    "    int wheels;\n",
+    "} mycar;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0f"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mycar.speed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mycar.wheels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Car car2{10.0, 2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10f"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car2.speed"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -372,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -396,7 +497,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_8:2:2: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'getValue'\u001b[0m\n",
+      " getValue()\n",
+      "\u001b[0;1;32m ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "getValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -407,7 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Value is 351387648\n",
+      "Value is 1451814912\n",
       "Value is 10\n"
      ]
     }
@@ -441,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -459,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -467,12 +600,12 @@
    },
    "outputs": [],
    "source": [
-    "void Two::setValue(int a){ x = a; };"
+    "void Two::setValue(int a){ x = a*3; };"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -485,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -496,7 +629,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Value is 351379456\n",
+      "Value is 1451806720\n",
       "Value is 10\n"
      ]
     }
@@ -839,6 +972,98 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class C2 {\n",
+    "public:\n",
+    "    int x;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    C2 c;\n",
+    "    c.x = 1000;\n",
+    "    cout << c.x;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class C3 {\n",
+    "    int x;\n",
+    "public:\n",
+    "    int count = 0;\n",
+    "    void setX(int v){\n",
+    "        x = v;\n",
+    "        count++;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    C3 c;\n",
+    "    cout << c.count << endl;;\n",
+    "    c.setX(10);\n",
+    "    cout << c.count<< endl;\n",
+    "    c.setX(11);\n",
+    "    cout << c.count<< endl;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -865,7 +1090,8 @@
    "outputs": [],
    "source": [
     "// create Account object myAccount\n",
-    "Account myAccount; "
+    "Account myAccount; \n",
+    "// Account myAccount{\"John Dow\"}; "
    ]
   },
   {
@@ -1109,7 +1335,7 @@
     "- Constructors **cannot** be declared _**const**_.\n",
     "    - Initializing an object modifies it.\n",
     "- **explicit** specifies that a constructor is explicit, that is, it cannot be used for implicit conversions and copy initialization.\n",
-    "    -it will be discussed in following lectures."
+    "    - it will be discussed in following lectures."
    ]
   },
   {
