--- a/notebooks/Into-to-OOP.ipynb
+++ b/notebooks/Into-to-OOP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1433,7 +1433,7 @@
      "output_type": "stream",
      "text": [
       "Begining of scope\n",
-      "Account name: John Dow\n",
+      "Account name: John Smith\n",
       "End of scope\n"
      ]
     }
@@ -1441,7 +1441,7 @@
    "source": [
     "{\n",
     "    cout << \"Begining of scope\" << endl;\n",
-    "    Account2 a{\"John Dow\"};\n",
+    "    Account2 a{\"John Smith\"};\n",
     "    cout << \"Account name: \" << a.getName()  << endl;\n",
     "    cout << \"End of scope\" << endl;\n",
     "}"
@@ -1468,7 +1468,7 @@
    "source": [
     "## Dynamic Allocation\n",
     "\n",
-    "To allocate an object on heap:\n",
+    "To allocate an object on **heap**:\n",
     "- use **new** keyword\n",
     "\n",
     "To deallocate:\n",
@@ -1477,17 +1477,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Begining of scope\n",
+      "Account name: Jane Dow\n",
+      "End of scope\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    cout << \"Begining of scope\" << endl;\n",
-    "    Account2* a = new Account2(\"John Dow\");\n",
+    "    Account2* a = new Account2(\"Jane Dow\");\n",
     "    cout << \"Account name: \" << a->getName()  << endl;\n",
     "    delete a;\n",
     "    cout << \"End of scope\" << endl;\n",
