--- a/notebooks/Classes.ipynb
+++ b/notebooks/Classes.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -718,12 +718,25 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IncrementalExecutor::executeFunction: symbol '_ZN4TimeD1Ev' unresolved while linking [cling interface function]!\n",
-      "You are probably missing the definition of Time::~Time()\n",
-      "Maybe you need to load the corresponding shared library?\n"
+      "Time 1: \n",
+      "Universal time: 00:01:02\n",
+      "\n",
+      "Time 2: \n",
+      "Universal time: 04:01:02\n",
+      "\n",
+      "Time 3: \n",
+      "Universal time: 04:03:02\n",
+      "\n",
+      "Time 4: \n",
+      "Universal time: 04:03:05\n",
+      "\n",
+      "Time object destroyed\n",
+      "Time object destroyed\n",
+      "Time object destroyed\n",
+      "Time object destroyed\n"
      ]
     }
    ],
@@ -742,13 +755,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got you\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    try{\n",
@@ -757,7 +778,7 @@
     "    catch (invalid_argument& e) {\n",
     "        cout << \"Got you\\n\";\n",
     "    }\n",
-    "    dispayTime(\"Time:\", t1);\n",
+    "    //dispayTime(\"Time:\", t1);\n",
     "}"
    ]
   },
@@ -914,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1019,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1039,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1057,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1105,13 +1126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object 1 constructor runs (global scope)\n",
+      "Begining of local scope\n",
+      "Object 2 constructor runs (local scope)\n",
+      "End of local scope\n",
+      "Object 2 destructor runs (local scope)\n"
+     ]
+    }
+   ],
    "source": [
     "CreateAndDestroy first{1, \"(global scope)\"};\n",
     "{\n",
@@ -1139,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1158,13 +1191,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Begining of local scope\n",
+      "Object 2 constructor runs (local scope)\n",
+      "Calling `create`\n",
+      "Begining of `create`\n",
+      "Object 5 constructor runs (local in create)\n",
+      "Object 6 constructor runs (local static in create)\n",
+      "Object 7 constructor runs (local in create)\n",
+      "End of `create`\n",
+      "Object 7 destructor runs (local in create)\n",
+      "Object 5 destructor runs (local in create)\n",
+      "Resume in local scope\n",
+      "Object 4 constructor runs (local)\n",
+      "End of local scope\n",
+      "Object 4 destructor runs (local)\n",
+      "Object 2 destructor runs (local scope)\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    cout << \"Begining of local scope\" << endl;\n",
@@ -1198,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1217,13 +1272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X: 66588672\n",
+      "X: 10\n",
+      "X: 30\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    PrivateRef X;\n",
@@ -1254,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1280,13 +1345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p1: (x:1, y:2), p2: (x:0, y:0)\n",
+      "p1: (x:1, y:2), p2: (x:1, y:2)\n",
+      "Point2D object [(x:1, y:2)] is destroyed\n",
+      "Point2D object [(x:1, y:2)] is destroyed\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point2D p1{1,2};\n",
@@ -1313,14 +1389,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_11:6:8: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable overloaded '='\u001b[0m\n",
+      "    p2 = p1; //  memberwise assignment\n",
+      "\u001b[0;1;32m    ~~ ^ ~~\n",
+      "\u001b[0m\u001b[1minput_line_9:1:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function (the implicit copy assignment operator) not viable: 'this' argument has type 'const Point2D', but method is not marked const\u001b[0m\n",
+      "class Point2D {\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point2D p1{1,2};\n",
@@ -1349,13 +1447,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_22:8:5: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mmember function 'setPoint' not viable: 'this' argument has type 'const Point2D', but function is not marked const\u001b[0m\n",
+      "    p2.setPoint(1,1); // const     non-const  !!! PROBLEM\n",
+      "\u001b[0;1;32m    ^~\n",
+      "\u001b[0m\u001b[1minput_line_17:8:10: \u001b[0m\u001b[0;1;30mnote: \u001b[0m'setPoint' declared here\u001b[0m\n",
+      "    void setPoint(int v, int w) {x= v; y = w; }; \n",
+      "\u001b[0;1;32m         ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point2D p1{1,2};\n",
@@ -1390,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1416,13 +1536,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point2D object [(x:0, y:0)] is destroyed\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    Point2D p1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "home @ (x:1, y:2)\n",
+      "Location object [home @ (x:1, y:2)] is destroyed\n",
+      "Point2D object [(x:1, y:2)] is destroyed\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Location home{\"home\", 1, 2};\n",
@@ -1452,13 +1605,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Begining of local scope\n",
+      "home @ (x:2, y:3)\n",
+      "home @ (x:3, y:4)\n",
+      "End of local scope\n",
+      "Location object [home @ (x:3, y:4)] is destroyed\n",
+      "Point2D object [(x:3, y:4)] is destroyed\n",
+      "Point2D object [(x:2, y:3)] is destroyed\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    cout << \"Begining of local scope\" << endl;\n",
@@ -1514,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1550,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1565,13 +1732,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x:0, y:0, z:0)\n",
+      "(x:1, y:0, z:0)\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point3D p;\n",
@@ -1583,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1601,13 +1777,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x:0, y:0, z:0)\n",
+      "(x:100, y:0, z:0)\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point3DUtils pu;\n",
@@ -1639,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1651,12 +1836,12 @@
     "    int x;\n",
     "public:\n",
     "    Point(int val) : x{val} {}\n",
-    "    void setX(int val){\n",
+    "    void setX(int x){\n",
     "        // implicitly use the this pointer to access the member x\n",
     "        cout << \"x = \" << x;\n",
     "        // explicitly use the this pointer and the arrow operator\n",
     "        // to access the member x\n",
-    "        this->x = val;\n",
+    "        this->x = x;\n",
     "        // explicitly use the dereferenced this pointer and\n",
     "        // the dot operator to access the member x\n",
     "        cout << \"\\n(*this).x = \" << (*this).x << endl;\n",
@@ -1666,13 +1851,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 10\n",
+      "(*this).x = 10\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point p{0};\n",
@@ -1803,6 +1997,48 @@
     "        cout << \"Counter after 'c2' destroyed: \" << Counter::getCount() << endl;\n",
     "    }\n",
     "    cout << \"Counter after 'c1' destroyed:  \" << Counter::getCount() << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class C {\n",
+    "public:\n",
+    "    int x{-1};\n",
+    "    void setX(int x){\n",
+    "        x = x;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    C obj;\n",
+    "    cout << obj.x << endl;\n",
+    "    obj.setX(10);\n",
+    "    cout << obj.x << endl;\n",
     "}"
    ]
   },
