updated Oper lecture

--- a/notebooks/Operators.ipynb
+++ b/notebooks/Operators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -51,41 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_19:4:11: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1minvalid operands to binary expression ('const char *' and 'const char *')\u001b[0m\n",
-      "    \"def\" + \"abc\";\n",
-      "\u001b[0;1;32m    ~~~~~ ^ ~~~~~\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
-   "source": [
-    "{    \n",
-    "    \"def\" + \"abc\";\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -96,13 +62,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ajaksjdefabc"
+      "defabc"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    //cout << \"ajaksj\";\n",
     "    string a{\"def\"};\n",
     "    string b{\"abc\"};\n",
     "    cout << a + b;\n",
@@ -280,7 +245,7 @@
     }
    },
    "source": [
-    "## Overloadi Rules and Restrictions\n",
+    "## Overloading Rules and Restrictions\n",
     "\n",
     "An operator's **precedence cannot be changed** by overloading.\n",
     "- However, parentheses can be used to force the order of evaluation of overloaded operators in an expression.\n",
@@ -362,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -382,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -454,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -515,7 +480,7 @@
    "source": [
     "## Tips\n",
     "\n",
-    "- Overloaded operators *should mimic** the functionality of their built-in counterparts\n",
+    "- Overloaded operators **should mimic** the functionality of their built-in counterparts\n",
     "    - the + operator should perform addition, not subtraction.\n",
     "\n",
     "- Avoid excessive or inconsistent use of operator overloading, as this can make a program cryptic and difficult to read."
@@ -539,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -552,14 +517,14 @@
     "public:\n",
     "    ClassWithUnaryOp(int v): x{v}{}\n",
     "    int operator!() const {\n",
-    "        return this->x*this->x;\n",
+    "        return x*x;\n",
     "    }\n",
     "};"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -570,13 +535,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16"
+      "25"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    ClassWithUnaryOp a{4};\n",
+    "    ClassWithUnaryOp a{5};\n",
     "    cout << !a;\n",
     "}"
    ]
@@ -620,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -634,7 +599,9 @@
     "    ClassWithIncOp(int v): x{v}{}\n",
     "    int getX() {return x;}\n",
     "    ClassWithIncOp& operator++(){\n",
+    "        // increment object\n",
     "        x = x + 1;\n",
+    "        // reference return to create an lvalue\n",
     "        return *this;\n",
     "    }\n",
     "};"
@@ -642,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -653,14 +620,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8"
+      "Before increment: 7\n",
+      "8\n",
+      "After increment: 8\n"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    ClassWithIncOp a{7};    \n",
-    "    cout << (++a).getX();\n",
+    "    ClassWithIncOp a{7};\n",
+    "    cout << \"Before increment: \"<< a.getX() << endl;\n",
+    "    cout << (++a).getX() << endl;\n",
+    "    cout << \"After increment: \"<< a.getX() << endl;\n",
     "}"
    ]
   },
@@ -682,6 +653,216 @@
     "    \n",
     "- The argument **0** is strictly a **\"dummy value\"** that enables the compiler to distinguish between the prefix and postfix increment operator functions.\n",
     "    - The same syntax is used to differentiate between the prefix and postfix decrement operator functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class ClassWithIncOp2 {\n",
+    "    int x;\n",
+    "public:\n",
+    "    ClassWithIncOp2(int v): x{v}{}\n",
+    "    int getX() {return x;}\n",
+    "    ClassWithIncOp2 operator++(int){\n",
+    "        // hold current state of object\n",
+    "        ClassWithIncOp2 tmp{*this};\n",
+    "        // increment object\n",
+    "        x = x + 1;\n",
+    "        // return unincremented, saved, temporary object\n",
+    "        return tmp; // value return; not a reference return\n",
+    "    }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before increment: 7\n",
+      "7\n",
+      "After increment: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    ClassWithIncOp2 a{7};\n",
+    "    cout << \"Before increment: \"<< a.getX() << endl;\n",
+    "    cout << (a++).getX() << endl;\n",
+    "    cout << \"After increment: \"<< a.getX() << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Dynamic Memory Management\n",
+    "\n",
+    "- You can control memory **allocation** and **deallocation** in a program for objects and for arrays of any built-in or user-defined type.\n",
+    "    - Known as **dynamic memory management**; performed with **new** and **delete**.\n",
+    "- Use the **new** operator to dynamically allocate the exact amount of memory required to hold an object at execution time.\n",
+    "- The object is created in the free store - **heap** - a region of memory assigned to each program for storing dynamically allocated objects.\n",
+    "- Once memory is allocated, you can access it via the pointer that operator **new** returns.\n",
+    "- Return memory by using the **delete** operator to **deallocate** it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Obtaining Dynamic Memory\n",
+    "\n",
+    "- The **new** operator allocates storage of the proper size for an object\n",
+    "    - calls the default constructor to initialize the object, and\n",
+    "    - returns a pointer to the type specified to the right of the new operator.\n",
+    "- If **new** is unable to find sufficient space in memory for the object, it indicates that an error occurred\n",
+    "    - by \"throwing an exception\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    ClassWithIncOp2* ptr{new ClassWithIncOp2(7)};\n",
+    "    cout << ptr->getX();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Releasing Dynamic Memory\n",
+    "\n",
+    "- To destroy a dynamically allocated object, use the **delete** operator as follows:\n",
+    "        delete ptr;\n",
+    "- This statement first calls the **destructor** for the object to which `ptr` points,\n",
+    "    - then deallocates the memory associated with the object, returning the memory to the free store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    ClassWithIncOp2* ptr{new ClassWithIncOp2(7)};\n",
+    "    cout << ptr->getX() << endl;\n",
+    "    delete ptr;\n",
+    "    // delete ptr; //DO NOT DO THAT TWO TIMES\n",
+    "    ptr = nullptr;\n",
+    "    cout << ptr->getX();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Tips\n",
+    "\n",
+    "- **Memory leak:** Not releasing dynamically allocated memory when it's no longer needed can cause the system to run out of memory prematurely.\n",
+    "- Do not delete memory that was not allocated by **new**. Doing so results in undefined behavior.\n",
+    "\n",
+    "- After you delete a block of dynamically allocated memory, be sure not to delete the same block again.\n",
+    "    - One way to guard against this is to immediately set the pointer to `nullptr`.\n",
+    "    - Deleting a `nullptr` has no effect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Initializing Dynamic Memory\n",
+    "\n",
+    "- You can provide an **initializer** for a newly created fundamental type variable, as in\n",
+    "        double *ptr{new double{3.14159}};\n",
+    "- The same syntax can be used to specify a comma-separated list of arguments to the constructor of an object.\n",
+    "- You can also use the **new** operator to allocate built-in arrays dynamically.\n",
+    "        int *gradesArray{new int[10]{}};        \n",
+    "- A dynamically allocated array's **size** can be specified using any non-negative integral expression that can be evaluated at execution time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Releasing Dynamically Allocated Built-In Arrays\n",
+    "\n",
+    "- To deallocate a dynamically allocated array, use the statement\n",
+    "        delete[] ptr;\n",
+    "- If the pointer points to a built-in array of objects, the statement first calls the destructor for every object in the array, then deallocates the memory.\n",
+    "- Using **delete** or **[]** on a **nullptr** has no effect.\n",
+    "- Using **delete** instead of **delete[]** for built-in arrays of objects can lead to runtime logic errors."
    ]
   }
  ],
