update of lab 1

--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -37,13 +37,10 @@
     "\n",
     "- Create a user-defined class `Real` that contains a private data member that would contain a value of the real number (10 pts).\n",
     "    - Overload the division operator ( `/` ) to divide two `Real`s.\n",
-    "    - Overload the equality operation ( `==` ) to compare two  `Real`s.\n",
     "- Derive a class `Complex` from `Real` and add additional data member for the imaginary part of the number (10 pts).\n",
     "    - Overload the multiplication operator ( `*` ) to multiply two `Complex` numbers.\n",
-    "    - Overload the equality operation ( `==` ) to compare two  `Complex` numbers.\n",
     "- Derive a class `Binomial` from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
     "    - Overload the addition operator ( `+` ) to add two `Binomial`s.\n",
-    "    - Overload the equality operation ( `==` ) to compare two `Binomial`s.   \n",
     "- For every class the stream insertion `<<` operator functions as **friend** functions (10 pts). \n",
     "    - The stream insertion operator should not be able to display if an input error occurred.\n",
     "    - For negative imaginary values, a minus sign should be printed rather than a plus sign.    \n",
@@ -68,17 +65,15 @@
     "    Real a{30.0};\n",
     "    Real b{6.0};\n",
     "    Real c{5.0};    \n",
-    "    cout << boolalpha << (a/b == c) // prints true\n",
+    "    cout << a << \"/\" << b << \" = \" << (a/b) << endl;\n",
     "                \n",
     "    Complex d{3.0, 1.0};  // 3 + i\n",
     "    Complex e{2.0, -2.0}; // 2 - 2i\n",
-    "    Complex f{8.0, 4.0};  // (3 + i)(2 - 2i) = 6 + 2i - 6i - 2ii = 8 - 4i\n",
-    "    cout << boolalpha << (d*e == f) // prints true\n",
+    "    cout << d << \"*\" << e << \" = \" << (d*e) << endl;\n",
     "        \n",
     "    Binomial h{2,1,1};    // 2x^2 + 1x^1 + 1x^0\n",
     "    Binomial i{1,-1,0};   // 1*x^1-1*x^0\n",
-    "    Binomial j{3,0,1};    // (2x^2+x+1)+(x^2-x) = 3x^2 + 1 \n",
-    "    cout << (h/i == j)    // prints true    \n",
+    "    cout << h << \"+\" << i << \" = \" << (h+i) << endl;   \n",
     "}"
    ]
   }
