--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -39,8 +39,8 @@
     "    - Overload the division operator ( `/` ) to divide two `Real`s.\n",
     "- Derive a class `Complex` from `Real` and add additional data member for the imaginary part of the number (10 pts).\n",
     "    - Overload the multiplication operator ( `*` ) to multiply two `Complex` numbers.\n",
-    "- Derive a class `Binomial` from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
-    "    - Overload the addition operator ( `+` ) to add two `Binomial`s.\n",
+    "- Derive a class `Polynomial` from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
+    "    - Overload the addition operator ( `+` ) to add two `Polynomial`s.\n",
     "- For every class the stream insertion `<<` operator functions as **friend** functions (10 pts). \n",
     "    - The stream insertion operator should not be able to display if an input error occurred.\n",
     "    - For negative imaginary values, a minus sign should be printed rather than a plus sign.    \n",
@@ -71,8 +71,8 @@
     "    Complex e{2.0, -2.0}; // 2 - 2i\n",
     "    cout << d << \"*\" << e << \" = \" << (d*e) << endl;\n",
     "        \n",
-    "    Binomial h{2,1,1};    // 2x^2 + 1x^1 + 1x^0\n",
-    "    Binomial i{1,-1,0};   // 1*x^1-1*x^0\n",
+    "    Polynomial h{2,1,1};    // 2x^2 + 1x^1 + 1x^0\n",
+    "    Polynomial i{1,-1,0};   // 1*x^1-1*x^0\n",
     "    cout << h << \"+\" << i << \" = \" << (h+i) << endl;   \n",
     "}"
    ]
