--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -76,6 +76,62 @@
     "    cout << h << \"+\" << i << \" = \" << (h+i) << endl;   \n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution: class `Real`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Real {\n",
+    "public:    \n",
+    "    double a;\n",
+    "\n",
+    "    Real(double x): a{x} {}\n",
+    "    Real operator/(Real& x) const {\n",
+    "        double r = this->a / x.a;\n",
+    "        return Real(r);\n",
+    "    }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test that class `Real` constructor and `+` operation work correct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.48039\n"
+     ]
+    }
+   ],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "int main()\n",
+    "{\n",
+    "    Real a{30.2};\n",
+    "    Real b{20.4};\n",
+    "    cout << (a / b).a << endl;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
