--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -35,11 +35,14 @@
     "\n",
     "Write a program that accomplishes each of the following:\n",
     "\n",
-    "- Create a user-defined class `Real` that contains a private data member that would contain a value of the real number (10 pts).\n",
+    "- Create a user-defined class `Real` that has a *protected* data member that would contain a value of the real number (10 pts).\n",
+    "    - Create a constructor that accepts one parameter which is used to initialize a class object.\n",
     "    - Overload the division operator ( `/` ) to divide two `Real`s.\n",
     "- Derive a class `Complex` from `Real` and add additional data member for the imaginary part of the number (10 pts).\n",
+    "    - Create a constructor that accepts two parameters which is used to initialize a class object.\n",
     "    - Overload the multiplication operator ( `*` ) to multiply two `Complex` numbers.\n",
     "- Derive a class `Polynomial` from `Complex` and add additional data member for the the exponents of algebraic coefficients (10 pts).\n",
+    "    - Create a constructor that accepts three parameters which is used to initialize a class object.\n",
     "    - Overload the addition operator ( `+` ) to add two `Polynomial`s.\n",
     "- For every class the stream insertion `<<` operator functions as **friend** functions (10 pts). \n",
     "    - The stream insertion operator should not be able to display if an input error occurred.\n",
@@ -61,10 +64,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
+    "int main() \n",
     "{\n",
     "    Real a{30.0};\n",
-    "    Real b{6.0};\n",
-    "    Real c{5.0};    \n",
+    "    Real b{6.0};  \n",
     "    cout << a << \"/\" << b << \" = \" << (a/b) << endl;\n",
     "                \n",
     "    Complex d{3.0, 1.0};  // 3 + i\n",
@@ -92,9 +98,11 @@
    "source": [
     "class Real {\n",
     "public:    \n",
+    "    // data memeber\n",
     "    double a;\n",
-    "\n",
+    "    // constructor\n",
     "    Real(double x): a{x} {}\n",
+    "    // overloaded operation\n",
     "    Real operator/(Real& x) const {\n",
     "        double r = this->a / x.a;\n",
     "        return Real(r);\n",
@@ -106,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test that class `Real` constructor and `+` operation work correct."
+    "To test the class `Real` constructor and `+` operation, we can run following test driver."
    ]
   },
   {
