--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "    Real(double x): a{x} {}\n",
     "    // overloaded operation\n",
     "    Real operator/(Real& x) const {\n",
-    "        double r = this->a / x.a;\n",
+    "        double r = a / x.a;\n",
     "        return Real(r);\n",
     "    }\n",
     "};"
@@ -138,6 +138,40 @@
     "    Real a{30.2};\n",
     "    Real b{20.4};\n",
     "    cout << (a / b).a << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we implement stream insertion `<<` operator for class `Real` by adding a friend function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Real {\n",
+    "    friend ostream& operator<<(ostream&, const Real&);\n",
+    "protected:    \n",
+    "    // data memeber\n",
+    "    double a;\n",
+    "public:    \n",
+    "    // constructor\n",
+    "    Real(double x): a{x} {}\n",
+    "    // overloaded operation\n",
+    "    Real operator/(Real& x) const {\n",
+    "        double r = a / x.a;\n",
+    "        return Real(r);\n",
+    "    }\n",
+    "};\n",
+    "\n",
+    "ostream& operator<<(ostream& output, const Real& obj) {\n",
+    "    output << obj.a;\n",
+    "    return output;\n",
     "}"
    ]
   }
