--- a/notebooks/Operators.ipynb
+++ b/notebooks/Operators.ipynb
@@ -465,8 +465,8 @@
    "outputs": [],
    "source": [
     "{\n",
-    "    ClassWithStreamOp x{10};\n",
-    "    cout << x << endl;\n",
+    "    ClassWithStreamOp obj{10};\n",
+    "    cout << obj << endl;\n",
     "}"
    ]
   },
