--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -14,12 +14,12 @@
     "## Problem\n",
     "\n",
     "Create an advanced scientific calculator that performs various calculations on numbers and polynomials.\n",
-    "In *abstrac algebra*, there exists an abstract description of above numerical or algebraic system called **group**.\n",
+    "In *abstract algebra*, there exists an abstract description of above numerical or algebraic system called **group**.\n",
     "- **Group** is a **set** with a **binary** operation.\n",
     "\n",
     "For example:\n",
     "\n",
-    "- Real numbers with division\n",
+    "- Real number with division\n",
     "- Complex numbers with multiplication\n",
     "- Polynomials with addition\n",
     "\n",
@@ -47,8 +47,8 @@
     "- For every class the stream insertion `<<` operator functions as **friend** functions (10 pts). \n",
     "    - The stream insertion operator should not be able to display if an input error occurred.\n",
     "    - For negative imaginary values, a minus sign should be printed rather than a plus sign.    \n",
-    "- For every class the stream extraction `>>` operator function should determine whether the data entered is valid, and, if not, it should set fail to indicate improper input (10 pts).\n",
-    "    - The values can be negative or positive, and it’s possible that one of the two values is not provided, in which case the appropriate data member should be set to 0."
+    "- **Bonus:** For every class the stream extraction `>>` operator function should determine whether the data entered is valid, and, if not, it should set fail to indicate improper input (10 pts).\n",
+    "    - The values can be negative or positive, and it's possible that one of the two values is not provided, in which case the appropriate data member should be set to 0."
    ]
   },
   {
@@ -70,16 +70,19 @@
     "int main() \n",
     "{\n",
     "    Real a{30.0};\n",
-    "    Real b{6.0};  \n",
-    "    cout << a << \"/\" << b << \" = \" << (a/b) << endl;\n",
+    "    Real b{20.0};  \n",
+    "    // next line shows: 30/20 = 1.5\n",
+    "    cout << a << \" / \" << b << \" = \" << (a/b) << endl;\n",
     "                \n",
     "    Complex d{3.0, 1.0};  // 3 + i\n",
     "    Complex e{2.0, -2.0}; // 2 - 2i\n",
-    "    cout << d << \"*\" << e << \" = \" << (d*e) << endl;\n",
+    "    // next line shows: (3+1i)*(2-2i) = (8-4i)\n",
+    "    cout << \"(\" << d << \") * (\" << e << \") = \" << (d*e) << endl;\n",
     "        \n",
-    "    Polynomial h{2,1,1};    // 2x^2 + 1x^1 + 1x^0\n",
-    "    Polynomial i{1,-1,0};   // 1*x^1-1*x^0\n",
-    "    cout << h << \"+\" << i << \" = \" << (h+i) << endl;   \n",
+    "    Polynomial h{2,1,1};    // 2x^2+1x+1\n",
+    "    Polynomial i{1,-1,0};   // 1x^2-1x\n",
+    "    // next line shows: (2x^2+1x+1) + (1x^2-1x) = (3x^2+1)\n",
+    "    cout << \"(\" << h << \") + (\" << i << \") = \" << (h+i) << endl;     \n",
     "}"
    ]
   },
@@ -91,8 +94,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by sketching preliminary version of the `Real` class."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +124,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To test the class `Real` constructor and `+` operation, we can run following test driver."
+    "To test the class `Real` constructor and `+` operation, we use following test driver.\n",
+    "- **Note:** Above class has `public` data member."
    ]
   },
   {
@@ -145,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we implement stream insertion `<<` operator for class `Real` by adding a friend function."
+    "We change access modifier from `public` to `protected`. So, in order to access our protected data field, we implement a stream insertion `<<` operator for class `Real` by adding a friend function. The final version of the class `Real` is following:"
    ]
   },
   {
@@ -173,6 +184,42 @@
     "    output << obj.a;\n",
     "    return output;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we implement `Complex` class by deriving it from the `Real` class and inheriting all its data members.\n",
+    "\n",
+    "The `Complex` class represents a complex number, which has two components real and imaginary. We designate the inherited data member `a` of the `Real` class to be the real part of our complex number.\n",
+    "\n",
+    "We add another data member `b` for the imaginary component of the complex number in `Complex` class.\n",
+    "\n",
+    "Now, we need to initialize both data members. However, the member `a` cannot be initialized explicitly in the constructor of the class `Complex`. We can perform implicit initialization by calling the constructor of the base class `Real` as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Complex : public Real {\n",
+    "protected:\n",
+    "    double b;\n",
+    "public:\n",
+    "    // derived class constructor that uses base class constructor\n",
+    "    Complex(double x, double y): Real(x), b{y} {}\n",
+    "    ....\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Continue by analogy, implementing necessary operations and friend functions for provided test driver."
    ]
   }
  ],
